@@ -3,32 +3,42 @@ package org.schwering.irc.manager;
 import org.schwering.irc.lib.IRCUtil;
 
 /**
- * Creates a new message object that wraps a simple string message.
- * This container allows to easily strip mIRC color codes.
+ * Represents a message object that wraps a simple string message.
+ * If the connection that belongs to the message object is set to 
+ * strip mIRC colorcodes, this object does the job. 
  * @author Christoph Schwering &lt;schwering@gmail.com&gt;
  * @since 2.00
  * @version 1.00
  */
 public class Message {
+	private Connection conn;
 	private String msg;
 	
-	public Message(String msg) {
+	Message(Connection conn, String msg) {
+		this.conn = conn;
 		this.msg = msg;
 	}
 	
+	/**
+	 * Indicates whether the message is empty.
+	 */
 	public boolean isEmpty() {
 		return msg == null || msg.length() == 0;
 	}
 	
+	/**
+	 * Returns the text. If <code>Connection.isColorsEnabled() == false</code>,
+	 * potentially present mIRC colorcodes are removed.
+	 */
 	public String getText() {
-		return msg;
+		return conn.isColorsEnabled() ? msg : IRCUtil.stripColors(msg);
 	}
 	
-	public String getColorFilteredText() {
-		return IRCUtil.parseColors(msg);
-	}
-	
+	/**
+	 * Returns the same as <code>getText()</code>.
+	 * @see #getText()
+	 */
 	public String toString() {
-		return msg;
+		return getText();
 	}
 }
