@@ -1,6 +1,10 @@
 Changelog of IRClib (IRC client library):
 
 IRClib 1.11 (xx.xx.2008):
+ * Added:   IRCUtil.stripColors() which behaves same like the old 
+            IRCUtil.parseColors(), but does not remove CTCP_DELIMITERs.
+            However, the old parseColors() are not deprecated, because they
+            still do something useful.
  * Added:   IRCConnection.setDebug() and IRCConnectin.setDebugWriter()
             add a rudimentary debug output (again, was removed in 0.91). 
  * Fixed:   IRCUtil.parseColors() decremented i by (j-i) instead of 1 which
